# shell-rs

./: README.md
ferris-wheel/compile-fail/: modules-1.rs  move.rs
ferris-wheel/compile-pass/: lifetimes-2.rs  lifetimes-4.rs  trait-namespace.rs  try.rs
ferris-wheel/run-pass/: builder.rs  expressions.rs  trait-impl.rs  ufcs.rs
stack-vec/: Cargo.toml
stack-vec/src/: lib.rs
ttywrite/: Cargo.toml  README.md
ttywrite/src/: main.rs  parsers.rs
volatile/: Cargo.toml
volatile/src/: lib.rs
xmodem/: Cargo.toml
xmodem/src/: lib.rs
